Fix (Hack) icon vertical alignment in single message help text

--- a/packages/components/help-text/src/help-text.css
+++ b/packages/components/help-text/src/help-text.css
@@ -31,7 +31,9 @@
 		}
 
 		&.single-message {
-			align-items: center;
+			& svg {
+				margin-top: 2px;
+			}
 
 			&:before {
 				display: none;
